projects/kubernetes-internal-developer-platform/manifests/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-api
  namespace: platform-demo
spec:
  replicas: 2
  selector:
    matchLabels: { app: platform-api }
  template:
    metadata: { labels: { app: platform-api } }
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile: { type: RuntimeDefault }
      containers:
      - name: api
        image: ghcr.io/obinna-obika-devops/platform-api:1.0.0
        ports: [{ containerPort: 8080 }]
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: { drop: [ALL] }
        readinessProbe:
          httpGet: { path: /health, port: 8080 }
        livenessProbe:
          httpGet: { path: /health, port: 8080 }
        resources:
          requests: { cpu: 100m, memory: 128Mi }
          limits: { cpu: 500m, memory: 512Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: platform-api
  namespace: platform-demo
spec:
  selector: { app: platform-api }
  ports: [{ port: 80, targetPort: 8080 }]
